--- a/src/components/Sidebar.module.scss
+++ b/src/components/Sidebar.module.scss
@@ -64,9 +64,6 @@
   padding: 0;
   background-size: contain;
   background-repeat: no-repeat;
-}
-
-.titleLogo {
   width: 247px;
   height: 64px;
   margin-right: 1rem;
